# why-prep-2

./: .gitignore  LICENSE  README.md
analysis/: analysis.ml  analysis_funs.ml  analyze_bc.ml  analyze_inputs.ml  analyze_noise.ml  analyze_prep.ml  comp_tprep.ml  dune  eigenvalues.ml  entanglement.ml  fixed_points.ml  gather.ml  gather_accuracies.ml  input_regression.ml  jpca.ml  lara.ml  modes.ml  noise_analysis.ml  obs_analysis.ml  params_analysis.ml  pca.ml  test_nonnorm.ml  tests.ml  toy_data.ml
data/: c  c_500  c_relu  ctrl_gramian  low_rank_1  low_rank_10  obs_gramian  random_w  random_w_2  target_hand  target_hands  target_thetas  theta_reach_1  transformed_a  u_1  u_10  v_1  v_10  w_end  w_rec_500  w_skew
data/size_50/: c_soc_50  w_rec_50
lib/: aD.ml  analysis_funs.ml  defaults.ml  dune  dynamics.ml  dynamics.mli  dynamics_typ.ml  likelihoods.ml  likelihoods.mli  likelihoods_typ.ml  marginal.ml  marginal_mli.ml  misc.ml  model.ml  model.mli  model_typ.ml  priors.ml  priors.mli  priors_typ.ml  readout.ml  readout.mli  readout_typ.ml
mpc/: dune  ilqr_mpc.ml  mpc_cost.ml  params.ml  prep.ml  prep.mli  typ.ml
notebooks/: comparison.ipynb  ctrl_analysis.ipynb  double.ipynb  fig_comparison.ipynb  hyperparams.ipynb  network_comp.ipynb  networks.ipynb  orthogonality.ipynb  paper.mplstyle  plot_2d.ipynb  plots.ipynb  potency.ipynb  potency_skew.ipynb  visualization.ipynb
notes/: differentiate.tex
src/: alignment.ml  analyses.ml  analysis.ml  analysis_potency.ml  analyze_bc.ml  analyze_prep.ml  check.ml  check_grads.ml  comp_networks.ml  comp_tprep.ml  compare_ac_data.ml  compute_likelihood.ml  construct.ml  costs.ml  diff_c.ml  double_analysis.ml  double_ramping.ml  double_ramping_scan.ml  dune  eigenvalues.ml  end_to_end.ml  eq_h2norm.ml  eval_rads.ml  follow_target.ml  gather.ml  gather_arm.ml  gather_random_baselines.ml  hierarchical.ml  lara.ml  learn_lr.ml  learn_w_torques.ml  loss_across.ml  low_rank_b.ml  low_rank_summary.ml  movements.ml  new_run.ml  noise_robustness.ml  obs_analysis.ml  open_prms.ml  opt_multiscale.ml  (+53 more)
