(executables
 (names
  run_soc
  optimize_ab
  loss_across
  check
  gather
  mini_abg
  eq_h2norm
  cbar_potency
  sample_2d
  scan_socs
  eval_rads
  analysis_potency
  alignment
  run_ramping_lin_cs
  follow_target
  potency
  run_2d
  open_prms
  eval_rad_abg
  run_chaotic_gated
  run_ramping_small
  learn_lr
  compare_ac_data
  compute_gamma
  run_ramping_lin
  rerun_double
  run_chaotic_restarts
  test_mll
  rerun_ramping
  test_fisher
  run_double_force_prep
  projs
  double_ramping
  ramping_lowrank
  run_ramping_tanh
  run_ramping
  low_rank_b
  low_rank_summary
  comp_networks
  prioritize_prep
  run_noisy_baseline
  run_baseline_random
  run_sparse_soc
  run_double
  analyses
  eval_rads_2
  proj_double_prep
  eval_sas
  prep_analysis
  run_soc_noises
  construct
  gather_arm
  check_grads
  opt_multiscale
  run_baseline
  run_arm
  run_fast
  costs
  visualize_controllability
  gather_random_baselines
  run_soft_soc
  test_priors
  run_chaotic
  thetas_to_hands
  run_hyps_ramping
  run_log_barrier
  diff_c
  test_acquire_tgt
  run_soft_relu
  run_ramping_skew
  run_ramping_comp
  double_ramping_scan
  compute_likelihood
  test_occupancy)
 (libraries accessor adam owl cmdargs owl-opt owl-opt-lbfgs arm lib)
 (preprocess
  (pps ppx-owl-opt)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
